--- a/dbt_project.yml
+++ b/dbt_project.yml
@@ -42,6 +42,11 @@ models:
       +materialized: table
     staging:
       +materialized: table
+    
+      incremental_strategy: merge
+    
+
+
       
 
       
