--- a/models/staging/exposure.yml
+++ b/models/staging/exposure.yml
@@ -8,18 +8,11 @@ exposures:
     maturity: high
     url: https://bi.tool/dashboards/1
     description: >
-      Did someone say "exponential growth"?
+     
 
     depends_on:
-      - ref('orders')
-      - ref('order_merge')
-      - ref('supplies')
-      - ref('order_macro_data')
-      - ref('order_append')
-      - ref('customers')
-
- 
-
+      - ref('final_business')
+      
     owner:
       name:  saisri
       email: snowflaketraining01@gmail.com
