--- a/dbt_project.yml
+++ b/dbt_project.yml
@@ -44,7 +44,8 @@ models:
       +materialized: table
     DBT_Stage_tables:
       +materialized: table
-    
+snapshots:
+  +target_schema: snapshots    
 
 
     
