--- a/dbt_project.yml
+++ b/dbt_project.yml
@@ -38,10 +38,10 @@ clean-targets:         # directories to be removed by `dbt clean`
 models:
   my_new_project:
     # Applies to all files under models/example/
-    example:
-      +materialized: table
+
     staging:
       +materialized: table
+      +transient: false
     DBT_Stage_tables:
       +materialized: table
 snapshots:
